--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Alura Books</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="banner">
+    <link rel="srylesheet" href="carrossel.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
 </head>
 <body>
 <header class="cabecalho">
@@ -38,34 +43,53 @@
         
     </ul>
     <img src="img/image copy.png" alt="Logo da Alurabooks" class="container-imagem">
-    <a href="#"> <img src="img/image copy 2.png" alt="Meus favoritos"></a>
-    <a href="#"> <img src="./img/image copy 3.png" alt="Sacola de compras"></a>
-    <a href="#"> ,<img src="./img/image copy 4.png" alt="Meu perfil"></a>
+    </div>
+    <div class="container">
+    <a href="#"> <img src="img/image copy 2.png" alt="Meus favoritos" class="container-imagem"></a>
+    <a href="#"> <img src="./img/image copy 3.png" alt="Sacola de compras" class="container-imagem"></a>
+    <a href="#"> <img src="./img/image copy 4.png" alt="Meu perfil" class="container-imagem"></a>
     </div>
 </header>
+
 <section class="banner">
     <h2 class="banner-titulo">Já sabe por onde começar?</h2>
     <p class="banner-texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input type="search" class="banner-pesquisa" placeholder="Qual sera sua próxima leitura?">
     </section>
+
     <section class="carrossel">
     <h2 class="carrossel-titulo">Novos lançamentos</h2>
-</h2>
-</h2></section>
-<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.
+    <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+     <div class="swiper-pagination"></div>
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar -->
+  </div>
+    </section>
 
-js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
-    <div class="swiper">
 const swiper = new Swiper('.swiper', {
 spaceBetween: 10,
 slidesPerView: 3,
 pagination: {
-el: ''.swiper-pagination',
-type: 'bullets',
-},
-</div>
+    el: '.swiper-pagination',
+    type:'bullets',
+  },
+  
 });
-</script>
+   </script>
 </body>
-</html>
