--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
-  
-    <!-- If we need scrollbar -->
-  </div>
+   </div>
+  <div class="card">
+    <div class="card-descricao">
+    <div class="descricao">
+     <h3 class="descricao-titulo">Talvez você também se interesse por ...</h3>
+     <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
+     <p class="descricao-titulo">Construindo uma aplicão integrada com a plataforma do Google</p>
+    </div>
+
     </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
