--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
      <p class="descricao-titulo">Construindo uma aplicão integrada com a plataforma do Google</p>
     </div>
 
+    <div class="card_botões">
+        <ul class="botões"></ul>
+        <li class="botões_item"> <img src=""</li>
+    </div>
+
     </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
