--- a/index.html
+++ b/index.html
@@ -82,13 +82,18 @@
      <h3 class="descricao-titulo">Talvez você também se interesse por ...</h3>
      <h2 class="descricao-titulo-livro">Angular 11 e Firebase</h2>
      <p class="descricao-titulo">Construindo uma aplicão integrada com a plataforma do Google</p>
+    
     </div>
+   <img src="img/image copy 6.png" class="descricao-imagem">
 
-    <div class="card_botões">
-        <ul class="botões"></ul>
-        <li class="botões_item"> <img src=""</li>
+    <div class="card-botoes">
+        <ul class="botoes"></ul>
+        <li class="botoes-item"> <img src="./img/image copy 2.png"></li>
+        <li class="botoes-item"><img src="./img/image copy 3.png" alt="Adicionar ao carrinho"></li>
+        </ul>
+        <a href="#" class="botoes-ancora"> Saiba mais</a>
     </div>
-
+   
     </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
