--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="banner">
     <link rel="srylesheet" href="carrossel.css">
+    <link rel="stylesheet" href="rodape.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 <header class="cabecalho">
     <div class="container">
@@ -43,6 +47,7 @@
         
     </ul>
     <img src="img/image copy.png" alt="Logo da Alurabooks" class="container-imagem">
+    <h1 class="container titulo"><b class="container-titulo-negrito">Alura</b>Books</h1>
     </div>
     <div class="container">
     <a href="#"> <img src="img/image copy 2.png" alt="Meus favoritos" class="container-imagem"></a>
@@ -109,3 +114,4 @@ pagination: {
 });
    </script>
 </body>
+
