--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
           </ul>
       
     </section>
+    <section class="contato">
+        <div class="contato-descricao">
+        <h2 class="contato-titulo">Fique por dentro das novidades!</h2>
+        <p class="contato-texto">Atualizações de e-books, novos livros, promoções e outros</p>
+        </div>
+        <input type="email" placeholder="Cadastre seu email" class="contato-email">
+      </section>
+      <hr/>
+      <footer class="rodape">
+        <h2 class="rodape-titulo">Grupo Alura</h2>
+      </footer>
+      <script src= ></script>
+      <script>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
