--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <script src= ></script>
       <script>
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script src= ></script>
 <script>
 const swiper = new Swiper('.swiper', {
 spaceBetween: 10,
