--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
       <footer class="rodape">
         <h2 class="rodape-titulo">Grupo Alura</h2>
       </footer>
-      <script src= ></script>
+      <script src=></script>
       <script>
+        const swiper = new Swiper('.swiper', {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination: {
+        el: '.swiper-pagination',
+        type: 'bullets',
+      },
+        });
+        </script>
+    </body>
+    
+    </html>
 
-<script src= ></script>
-<script>
-const swiper = new Swiper('.swiper', {
-spaceBetween: 10,
-slidesPerView: 3,
-pagination: {
-    el: '.swiper-pagination',
-    type:'bullets',
-  },
-  
-});
-   </script>
-</body>
+
 
