--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide"><img src="img/apachekafka.png" alt=""></div>
       <div class="swiper-slide">Slide 2</div>
       <div class="swiper-slide">Slide 3</div>
       ...
