--- a/index.html
+++ b/index.html
@@ -70,9 +70,21 @@
      <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide"><img src="img/apachekafka.png" alt=""></div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide"><img src="./apachekafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
+      <div class="swiper-slide"><img src="./image copy.png" alt="Livro sobre Portugol do Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre JavaScript do Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 3.png" alt="Livro sobre Tuning no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Nodejs.png" alt="Livro sobre Node.js no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/ReactNative.png" alt="Livro sobre React Native no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão de Produtos no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Liderança.png" alt="Livro sobre Liderança no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Gestão2.png" alt="Livro sobre Gestão no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/MetricasAgeis.png" alt="Livro sobre Métricas Ágeis no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Construct2.png" alt="Livro sobre Construção no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/UX.png" alt="Livro sobre UX no Alurabooks"></div>
+    </div>
       ...
     </div>
     <!-- If we need pagination -->
