--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="swiper-slide"><img src="./image copy 3.png" alt="Livro sobre Tuning no Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Gestão no Alurabooks"></div>
-      <div class="swiper-slide"><img src="./img/Nodejs.png" alt="Livro sobre Node.js no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 6.png alt="Livro sobre Node.js no Alurabooks"></div>
       <div class="swiper-slide"><img src="./img/ReactNative.png" alt="Livro sobre React Native no Alurabooks"></div>
       <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão de Produtos no Alurabooks"></div>
       <div class="swiper-slide"><img src="./img/Liderança.png" alt="Livro sobre Liderança no Alurabooks"></div>
