--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <div class="swiper-pagination"></div>
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide"><img src="./apachekafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
+      <div class="swiper-slide"><img src="image copy 7.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
       <div class="swiper-slide"><img src="./image copy.png" alt="Livro sobre Portugol do Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre JavaScript do Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 3.png" alt="Livro sobre Tuning no Alurabooks"></div>
@@ -83,7 +83,7 @@
       <div class="swiper-slide"><img src="./img/Gestão2.png" alt="Livro sobre Gestão no Alurabooks"></div>
       <div class="swiper-slide"><img src="./img/MetricasAgeis.png" alt="Livro sobre Métricas Ágeis no Alurabooks"></div>
       <div class="swiper-slide"><img src="./img/Construct2.png" alt="Livro sobre Construção no Alurabooks"></div>
-      <div class="swiper-slide"><img src="./img/UX.png" alt="Livro sobre UX no Alurabooks"></div>
+      <div class="swiper-slide"><img src="Livro sobre UX no Alurabooks"></div>
     </div>
       ...
     </div>
