--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!-- Slides -->
       <div class="swiper-slide"><img src="image copy 7.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
       <div class="swiper-slide"><img src="image copy 8.png"Livro sobre Portugol do Alurabooks"></div>
-      <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre JavaScript do Alurabooks"></div>
+      <div class="swiper-slide"><img src="image copy 9.png"Livro sobre JavaScript do Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 3.png" alt="Livro sobre Tuning no Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
       <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Gestão no Alurabooks"></div>
