--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
       <hr/>
       <footer class="rodape">
         <h2 class="rodape-titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+          <li class="lista-rodape-titulo">Educação</li>
+          <li class="lista-rodape-item">
+            <img src="./img/CasaDoCodigo.svg" alt="Logo da casa do código">
+        </ul>
       </footer>
       <script src=></script>
       <script>
@@ -167,6 +172,7 @@
     </body>
     
     </html>
+
 
 
 
