--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
           <li class="lista-rodape-titulo">Educação</li>
           <li class="lista-rodape-item">
             <img src="./img/CasaDoCodigo.svg" alt="Logo da casa do código">
+            <a href="#" class="lista-rodape-link">Casa do Código</a>
+            </li>
+            <li class="lista-rodape-item">
+              <img src="./Caelum.svg"
         </ul>
       </footer>
       <script src=></script>
