--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
             <a href="#" class="lista-rodape-link">Casa do Código</a>
             </li>
             <li class="lista-rodape-item">
-              <img src="./Caelum.svg"
+              <img src="./Caelum.svg" alt="logo da Caelum">
+              <a href="#" class="lista-rodape-link">Caleum</a>
+            </li>
         </ul>
       </footer>
       <script src=></script>
