--- a/index.html
+++ b/index.html
@@ -163,6 +163,54 @@
               <a href="#" class="lista-rodape-link">Caleum</a>
             </li>
         </ul>
+        <ul class="lista-rodape">
+          <li class="lista-rodape-titulo">Educação online</li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 2.png" alt="Logo da Alura">
+            <a href="#" class="lista-rodape-link">Alura</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 3.png" alt="Logo da Alura empresas">
+            <a href="#" class="lista-rodape-item">Alura Empresas</a>
+          </li>
+          <li class="lista-rodape-item">
+       </li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 6.png" alt="Logo da Alura START">
+            <a href="#" class="lista-rodape-link">Alura START</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 5.png" alt="Logo MusicDon">
+            <a href="#" class="lista-rodape-link">MusicDon</a>
+          </li>
+          <li class="lista-menu-item">
+            <img src="./img/image copy 4.png" alt="Logo da PM3">
+            <a href="#" class="lista-meu-link">PM3</a>
+          </li>
+        </ul>
+        <ul class="lista-rodape">
+          <li class="lista-rodape-titulo">Comunidade</li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 3.png" alt="Logo da Scuba">
+            <a href="#" class="lista-rodape-link">Scuba Dev</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/Vector (1).png" alt="Logo Layers">
+            <a href="#" class="lista-rodape-link">Layers ponto Tech</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/Vector (1).png" alt="Logo Like a Buss">
+            <a href="#" class="lista-rodape-link">Like Buss</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy.png" alt="Logo Careira sem fronteira">
+            <a href="#" class="lista-rodape-link">Hibsters ponto Jobs</a>
+          </li>
+          <li class="lista-rodape-item">
+            <img src="./img/image copy 5.png" alt="Logo GUJ">
+            <a href="#" class="lista-rodape-link">GUJ</a>
+          </li>
+        </ul>
       </footer>
       <script src=></script>
       <script>
