--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
     <img src="img/image copy.png" alt="Logo da Alurabooks" class="container-imagem">
     <h1 class="container titulo"><b class="container-titulo-negrito">Alura</b>Books</h1>
     </div>
+    <ul class="opcoes">
+      <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
+      <label for="opcoes-menu" class="opcoes-botao">
+        <li class="opcoes-item">Categorias</li>
+      </label>
+      <ul class="lista-menu">
+        <li class="lista-menu-item">
+          <a href="#" class="lista-meu-link">Programação</a>       
+      </li>
+      <li class="lista-menu-item">
+          <a href="#" class="lista-meu-link">Front-end</a>       
+      </li>
+      <li class="lista-menu-item">
+          <a href="#" class="lista-meu-link">Infraestrutura</a>       
+      </li>
+      <li class="lista-menu-item">
+          <a href="#" class="lista-meu-link">Business</a>       
+      </li>
+      <li class="lista-menu-item">
+          <a href="#" class="lista-meu-link">Design & UX</a>       
+      </li>
+      </ul>
+    <li class="opcoes-item"><a href="#" class="opcoes-link">favoritos</a></li>
+    <li class="opcoes-item"><a href="#" class="opcoes-link">Minha estante</a></li>
+    </ul>
     <div class="container">
     <a href="#"> <img src="img/image copy 2.png" alt="Meus favoritos" class="container-imagem"></a>
     <a href="#"> <img src="./img/image copy 3.png" alt="Sacola de compras" class="container-imagem"></a>
@@ -111,7 +136,75 @@
         <a href="#" class="botoes-ancora"> Saiba mais</a>
     </div>
     </section>
-
+<section class="carrossel">
+  <h2 class="carrossel-titulo">Mais vendidos</h2>
+  <h2 class="carrossel-titulo">Novos lançamentos</h2>
+    <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+     <div class="swiper-pagination"></div>
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="image copy 7.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
+      <div class="swiper-slide"><img src="image copy 8.png" alt="sobre Portugol do Alurabooks"></div>
+      <div class="swiper-slide"><img src="image copy 9.png" alt="sobre JavaScript do Alurabooks"></div>
+      <div class="swiper-slide"><img src="apachekafka.png"Livro sobre Tuning no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Gestão no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./image copy 6.png alt="Livro sobre Node.js no Alurabooks"></div>
+      <h2 class="carrossel-titulo">Novos lançamentos</h2>
+    <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+     <div class="swiper-pagination"></div>
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      </div>
+      <div class="swiper-slide"><img src="./img/ReactNative.png" alt="Livro sobre React Native no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão de Produtos no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Liderança.png" alt="Livro sobre Liderança no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Gestão2.png" alt="Livro sobre Gestão no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/MetricasAgeis.png" alt="Livro sobre Métricas Ágeis no Alurabooks"></div>
+      <div class="swiper-slide"><img src="./img/Construct2.png" alt="Livro sobre Construção no Alurabooks"></div>
+      <div class="swiper-slide"><img src="Livro sobre UX no Alurabooks"></div>
+    </div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+   </div>
+    </div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+   </div>
+   <div class="card">
+    <div class="card-descricao">
+      <div class="descricao">
+        <img alt="Avaliação 5 estrelas">
+        <h3 class="descricao-titulo">Autora do mês</h3>
+        <h2 class="descricao-titulo-livro">Juliana Agarikov</h2>
+        <p class="descricao-texto">Analista de sistemas e escritora, Juliana é especialista em Front-end</p>
+      </div>
+      <img class="descricao-imagem">
+    </div>
+    <div class="card-botoes">
+      <ul class="botoes"></ul>
+      <li class="botoes-item"> <img src="./img/image copy 2.png"></li>
+      <li class="botoes-item"><img src="./img/image copy 3.png" alt="Adicionar ao carrinho"></li>
+      </ul>
+      <a href="#" class="botoes-ancora"> Saiba mais</a>
+    </div>
+    </div>
+   </div>
+</section>
     <section class="topicos">
         <h2 class="topicos-titulo">TOPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="topicos-lista">
