--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
    <div class="card">
     <div class="card-descricao">
       <div class="descricao">
-        <img alt="Avaliação 5 estrelas">
+        <img src="Estrelinhas.svg" alt="5 estrelas">
         <h3 class="descricao-titulo">Autora do mês</h3>
         <h2 class="descricao-titulo-livro">Juliana Agarikov</h2>
         <p class="descricao-texto">Analista de sistemas e escritora, Juliana é especialista em Front-end</p>
