--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="#" class="lista-menu-link">Design & UX</a>
         </li>
       </ul>
-      <img src="./img/Logo (1).png" alt="Logo da Alurabooks" class="container-imagem">
+      <img src="" alt="Logo da Alurabooks" class="container-imagem">
       <h1 class="container-titulo"><b class="container-titulo-negrito">Alura</b>Books</h1>
      <ul class="opcoes">
       <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
@@ -97,7 +97,7 @@
   <!-- Additional required wrapper -->
    <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide"><img src="./img/ApacheKafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
+    <div class="swiper-slide"><img src="image.copy7.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
     <div class="swiper-slide"><img src="./img/Portugol.png" alt="Livro sobre Portugol do Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Javascript.png" alt="Livro sobre JavaScript do Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Tuning.png" alt="Livro sobre Tuning no Alurabooks"></div>
