--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <a href="#" class="lista-rodape-link">Alura</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/AluraEmpresas.svg" alt="Logo da Alura empresas">
+      <img src="./AluraEmpresas (1).svg" alt="Logo da Alura empresas">
       <a href="#" class="lista-rodape-link">Alura Empresas</a>
     </li>
     <li class="lista-rodape-item">
