--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <!-- Additional required wrapper -->
          <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="./img/ApacheKafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
+          <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
           <div class="swiper-slide"><img src="./img/Portugol.png" alt="Livro sobre Portugol do Alurabooks"></div>
           <div class="swiper-slide"><img src="./img/Javascript (1).png" alt="Livro sobre JavaScript do Alurabooks"></div>
           <div class="swiper-slide"><img src="./img/Tuning.png" alt="Livro sobre Tuning no Alurabooks"></div>
