--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="#" class="lista-menu-link">Design & UX</a>
         </li>
       </ul>
-      <img src="./img/logo.png" alt="Logo da Alurabooks" class="container-imagem">
+      <img src="./image copy 5.png alt="Logo da Alurabooks" class="container-imagem">
       <h1 class="container-titulo"><b class="container-titulo-negrito">Alura</b>Books</h1>
      <ul class="opcoes">
       <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
