--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
    <div class="swiper-wrapper">
     <!-- Slides -->
     <div class="swiper-slide"><img src="./img/ApacheKafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
-    <div class="swiper-slide"><img src="./img/Portugol.png" alt="Livro sobre Portugol do Alurabooks"></div>
-    <div class="swiper-slide"><img src="./img/Javascript (1).png" alt="Livro sobre JavaScript do Alurabooks"></div>
-    <div class="swiper-slide"><img src="./img/Tuning.png" alt="Livro sobre Tuning no Alurabooks"></div>
-    <div class="swiper-slide"><img src="./img/Arquitetura.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 8.png alt="Livro sobre Portugol do Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 6.png alt="Livro sobre JavaScript do Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Tuning no Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Nodejs.png" alt="Livro sobre Node.js no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/ReactNative.png" alt="Livro sobre React Native no Alurabooks"></div>
