--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="card-botoes">
       <ul class="botoes">
         <li class="botoes-item"><img src="./img/coração.png" alt="Favoritar livro"></li>
-        <li class="botoes-item"><img src="./img/sacola.png" alt="Adicionar ao carrinho"></li>
+        <li class="botoes-item"><img src="./image copy 3.png00 alt="Adicionar ao carrinho"></li>
       </ul>
       <a href="#" class="botoes-ancora">Saiba mais</a>
     </div>
