--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
      </ul>
     <div class="container">
       <a href="#"><img src="./img/coração.png" alt="Meus favoritos" class="container-imagem container-imagem-transparente"></a>
-      <a href="#" class="container-link"><img src="./img/sacola.png" alt="Carrinhos de compras" class="container-imagem">
+      <a href="#" class="container-link"><img src=".per" alt="Meu perfil" class="container-imagem">
       <p class="container-texto">Minha Sacola</p> </a>
       <a href="#" class="container-link"><img src="./img/perfil.png" alt="Meu perfil" class="container-imagem">
       <p class="container-texto">Meu Perfil</p> </a>
