--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
    <div class="swiper-wrapper">
     <!-- Slides -->
     <div class="swiper-slide"><img src="./img/ApacheKafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
-    <div class="swiper-slide"><img src="./image copy 8.png alt="Livro sobre Portugol do Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre Portugol do Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 6.png alt="Livro sobre JavaScript do Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Tuning no Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
