--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="swiper-slide"><img src="./img/ApacheKafka.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
     <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre Portugol do Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 3.png"alt="Livro sobre JavaScript do Alurabooks"></div>
-    <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Tuning no Alurabooks"></div>
+    <div class="swiper-slide"><img src="./image copy 3.png00" alt="Livro sobre Tuning no Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Nodejs.png" alt="Livro sobre Node.js no Alurabooks"></div>
