--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="#" class="lista-menu-link">Design & UX</a>
         </li>
       </ul>
-      <img src="./image copy 5.png alt="Logo da Alurabooks" class="container-imagem">
+      <img src="./image copy 7.png"Logo da Alurabooks class="container-imagem">
       <h1 class="container-titulo"><b class="container-titulo-negrito">Alura</b>Books</h1>
      <ul class="opcoes">
       <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
@@ -102,7 +102,7 @@
     <div class="swiper-slide"><img src="./image copy 3.png"alt="Livro sobre JavaScript do Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 4.png" alt="Livro sobre Tuning no Alurabooks"></div>
     <div class="swiper-slide"><img src="./image copy 5.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
-    <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão no Alurabooks"></div>
+    <div class="swiper-slide"><img src="./im" alt="Livro sobre Gestão no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Nodejs.png" alt="Livro sobre Node.js no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/ReactNative.png" alt="Livro sobre React Native no Alurabooks"></div>
     <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão de Produtos no Alurabooks"></div>
