--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a href="#"><img src="./img/coração.png" alt="Meus favoritos" class="container-imagem container-imagem-transparente"></a>
       <a href="#" class="container-link"><img src="./image copy 10.png" alt="Meu perfil" class="container-imagem">
       <p class="container-texto">Minha Sacola</p> </a>
-      <a href="#" class="container-link"><img src="./img/perfil.png" alt="Meu perfil" class="container-imagem">
+      <a href="#" class="container-link"><img src="./image copy 11.png" alt="Meu perfil" class="container-imagem">
       <p class="container-texto">Meu Perfil</p> </a>
     </div>
   </header>
