--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <a href="#" class="lista-rodape-link">Casa do Código</a>
       </li>
       <li class="lista-rodape-item">
-        <img src="./img/Caelum.svg" alt="Logo da caleum">
+        <img src="./image copy 12.png" alt="Logo da caleum">
         <a href="#" class="lista-rodape-link">Caleum</a>
       </li>
     </ul>
