--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <ul class="lista-rodape">
       <li class="lista-rodape-titulo">Educação</li>
       <li class="lista-rodape-item">
-        <img src="./img/CasaDoCodigo.png" alt="Logo da casa do código">
+        <img src="./image copy 13.png" alt="Logo da casa do código">
         <a href="#" class="lista-rodape-link">Casa do Código</a>
       </li>
       <li class="lista-rodape-item">
