--- a/index.html
+++ b/index.html
@@ -234,27 +234,27 @@
     <ul class="lista-rodape">
     <li class="lista-rodape-titulo">Educação online</li>
     <li class="lista-rodape-item">
-      <img src="./img/Alura copy.svg" alt="Logo da Alura">
+      <img src="./image copy 14.png" alt="Logo da Alura">
       <a href="#" class="lista-rodape-link">Alura</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./AluraEmpresas (1).svg" alt="Logo da Alura empresas">
+      <img src="./image copy 15.png" alt="Logo da Alura empresas">
       <a href="#" class="lista-rodape-link">Alura Empresas</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/AluraLatam copy.svg" alt="Logo da Alura LATAM">
+      <img src="./image copy 15.png" alt="Logo da Alura LATAM">
       <a href="#" class="lista-rodape-link">Alura LATAM</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/AluraStart copy.svg" alt="Logo da Alura START">
+      <img src="./image copy 16.png" alt="Logo da Alura START">
       <a href="#" class="lista-rodape-link">Alura START</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/MusicDot.svg" alt="Logo da MusicDot">
+      <img src="./image copy 17.png" alt="Logo da MusicDot">
       <a href="#" class="lista-rodape-link">MusicDot</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/AluraLingua.svg" alt="Logo da Alura Língua">
+      <img src="./image copy 18.png" alt="Logo da Alura Língua">
       <a href="#" class="lista-rodape-link">Alura Língua</a>
     </li>
     <li class="lista-rodape-item">
