--- a/index.html
+++ b/index.html
@@ -269,23 +269,23 @@
       <a href="#" class="lista-rodape-link">Scuba Dev</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/Layers.svg" alt="Logo da Layers">
+      <img src="./image copy 19.png" alt="Logo da Layers">
       <a href="#" class="lista-rodape-link">Layers ponto Tech</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/LikeABoss.svg" alt="Logo da Like a Boss">
+      <img src="./image copy 21.png" alt="Logo da Like a Boss">
       <a href="#" class="lista-rodape-link">Like a Boss</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/CarreiraSemFronteira.svg" alt="Logo da Careira sem fronteira">
+      <img src="./image copy 22.png" alt="Logo da Careira sem fronteira">
       <a href="#" class="lista-rodape-link">Careira sem Fronteira</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/HipstersJobs.svg" alt="Logo da Hibsters">
+      <img src="./image copy 23.png" alt="Logo da Hibsters">
       <a href="#" class="lista-rodape-link">Hibsters ponto Jobs</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/GUJ.svg" alt="Logo da GUJ">
+      <img src="./image copy 24.png" alt="Logo da GUJ">
       <a href="#" class="lista-rodape-link">GUJ</a>
     </li>
    </ul>
