--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
    <ul class="lista-rodape">
     <li class="lista-rodape-titulo">Comunidade</li>
     <li class="lista-rodape-item">
-      <img src="./img/Scuba.svg" alt="Logo da Scuba">
+      <img src="./image copy 25.png" alt="Logo da Scuba">
       <a href="#" class="lista-rodape-link">Scuba Dev</a>
     </li>
     <li class="lista-rodape-item">
