--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
       <a href="#" class="lista-rodape-link">Alura Língua</a>
     </li>
     <li class="lista-rodape-item">
-      <img src="./img/PM3.svg" alt="Logo da PM3">
+      <img src="./PM3.svg" alt="Logo da PM3">
       <a href="#" class="lista-rodape-link">PM3</a>
     </li>
    </ul>
    <ul class="lista-rodape">
     <li class="lista-rodape-titulo">Comunidade</li>
     <li class="lista-rodape-item">
-      <img src="./image copy 25.png" alt="Logo da Scuba">
+      <img src="./" alt="Logo da Scuba">
       <a href="#" class="lista-rodape-link">Scuba Dev</a>
     </li>
     <li class="lista-rodape-item">
