--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <!-- Slides -->
           <div class="swiper-slide"><img src="./image copy 2.png" alt="Livro sobre apache Kafka e spring boot no AluraBooks"></div>
           <div class="swiper-slide"><img src="./image copy 27.png" alt="Livro sobre Portugol do Alurabooks"></div>
-          <div class="swiper-slide"><img src="./img/Javascript (1).png" alt="Livro sobre JavaScript do Alurabooks"></div>
+          <div class="swiper-slide"><img src="./image copy 28.png" alt="Livro sobre JavaScript do Alurabooks"></div>
           <div class="swiper-slide"><img src="./img/Tuning.png" alt="Livro sobre Tuning no Alurabooks"></div>
           <div class="swiper-slide"><img src="./img/Arquitetura.png" alt="Livro sobre Arquitetura no Alurabooks"></div>
           <div class="swiper-slide"><img src="./img/Gestão.png" alt="Livro sobre Gestão no Alurabooks"></div>
